Implemented checkbox support. Yey

--- a/core/src/main/resources/org/snowflake/views/velocity/snowflake_velocity_macros.vm
+++ b/core/src/main/resources/org/snowflake/views/velocity/snowflake_velocity_macros.vm
@@ -8,3 +8,12 @@
         <option $selected value="$choice">$choice</option>
     #end
 #end
+
+#macro(checkbox $name $value)
+    #if ($value == true)
+        #set($checked = 'checked="checked"')
+    #else
+        #set($checked = '')
+    #end
+<input type="checkbox" name="$name" value="true" $checked />
+#end
